lib/nails_derive/tests/ui/from-request-missing-query-attr.stderr
error: FromRequest field must have #[nails(query)]
 --> $DIR/from-request-missing-query-attr.rs:6:5
  |
6 |     query1: String,
  |     ^^^^^^
